--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
-ufw_whitelisted_ports:
-  - 22
-
+ufw_connection_rate_limits: [ ]
 ufw_whitelisted_ipv4_addresses: [ ]
 ufw_whitelisted_ipv6_addresses: [ ]
+ufw_whitelisted_ports:
+  - 22
