--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,4 +3,4 @@ ufw_connection_rate_limits: [ ]
 ufw_whitelisted_ipv4_addresses: [ ]
 ufw_whitelisted_ipv6_addresses: [ ]
 ufw_whitelisted_ports:
-  - 22
+  -  { port: 22,  protocol: tcp }
